--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head><title>Run!</title></head>
-<body>
-<!-- <canvas id="game" width="640" height="480"></canvas> -->
+<head>
+  <title>Run!</title>
+</head>
+<body onload="startGame()">
+  
+  <!-- Preload all the content -->  
+  <img src="level.png" style="display: none;" />
+  <img src="level-map.png" style="display: none;" />
+  <img src="graphics/cat.1.png" style="display: none;" />
+  <img src="graphics/cat.2.png" style="display: none;" />
+  <img src="graphics/cat.3.png" style="display: none;" />
+  <img src="graphics/cat.4.png" style="display: none;" />
+  <img src="graphics/cat.5.png" style="display: none;" />
+  <img src="graphics/cat.backwards.1.png" style="display: none;" />
+  <img src="graphics/cat.backwards.2.png" style="display: none;" />
+  <img src="graphics/cat.backwards.3.png" style="display: none;" />
+  <img src="graphics/cat.backwards.4.png" style="display: none;" />
+  <img src="graphics/cat.backwards.5.png" style="display: none;" />
+  <img src="graphics/slime.1.png" style="display: none;" />
+  <img src="graphics/slime.2.png" style="display: none;" />
+  <img src="graphics/slime.3.png" style="display: none;" />
+  <img src="graphics/slime.4.png" style="display: none;" />
+  <img src="graphics/slime.5.png" style="display: none;" />
+  <img src="graphics/tiger.1.png" style="display: none;" />
+  <img src="graphics/tiger.2.png" style="display: none;" />
+  <img src="graphics/tiger.3.png" style="display: none;" />
+  <img src="graphics/tiger.4.png" style="display: none;" />
+  <img src="graphics/tiger.5.png" style="display: none;" />
+  <img src="graphics/tiger.backwards.1.png" style="display: none;" />
+  <img src="graphics/tiger.backwards.2.png" style="display: none;" />
+  <img src="graphics/tiger.backwards.3.png" style="display: none;" />
+  <img src="graphics/tiger.backwards.4.png" style="display: none;" />
+  <img src="graphics/tiger.backwards.5.png" style="display: none;" />
+  
 <script type="text/javascript">var module = {};</script>
 <script type="text/javascript" src="game.js"></script>
 <script type="text/javascript">
+  function startGame() {
     game.start();
+  }
 </script>
 </body>
 </html>
